--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,3 +63,7 @@
 @import url(./blocks/modal/__container/_tooltip/modal__container_tooltip.css);
 @import url(./blocks/tooltip/__text/tooltip__text.css);
 @import url(./blocks/tooltip/__close-btn/tooltip__close-btn.css);
+@import url(./blocks/no-cards/__container/no-cards__container.css);
+@import url(./blocks/no-cards/__title/no-cards__title.css);
+@import url(./blocks/no-cards/__button-centered/no-cards__button-centered.css);
+
