--- a/frontend/src/blocks/profile/__add-element-btn/profile__add-element-btn.css
+++ b/frontend/src/blocks/profile/__add-element-btn/profile__add-element-btn.css
@@ -11,14 +11,10 @@
   margin-bottom: 7px;
   padding: 0;
   transition: opacity 0.3s ease-in-out;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  -moz-transition: opacity 0.3s ease-in-out;
-  -ms-transition: opacity 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out;
 }
 
 .profile__add-element-btn:hover {
-  /* opacity: 60%; */
+  opacity: 60%;
 }
 
 @media screen and (max-width: 800px) {
